# service/BlogService.js
@@ -10,48 +10,53 @@ const mng = require('mongoose');
 
 const blogSchema = new mng.Schema({
   "@context": String,
-        "@type": String,
-        "@id": Number,  // Aqui el id de blog
-        "headline": String,
-        "description": String,
-        "genre" : String,
-        "author": {
-              "@type": String,
-              "@id": Number // Aqui el id de autor.
-        }
+  "@type": String,
+  "@id": String,
+  identifier: Number,
+  headline: String,
+  description: String,
+  genre: String,
+  author: {
+    "@type": String,
+    "@id": String,
+    identifier: Number // Aqui el id de autor.
+  }
 });
 var blogModel = mng.model('blog', blogSchema)
- let Blogs = []
-exports.createBlog = async function(body) {
+let Blogs = []
+
+exports.createBlog = async function (body) {
   var blog = new blogModel({
     "@context": "https://schema.org",
     "@type": "Blog",
-    "@id": ,  // Aqui el id de blog
-    "headline": "Blog1",
-    "description": "p",
-    "genre" : body.genre,
-    "author": {
-          "@type": "Person",
-          "@id": "0" // Aqui el id de autor.
+    "@id": body.blogId+"",
+    identifier: body.blogId,
+    headline: body.name,
+    description: body.description,
+    genre: body.category,
+    author: {
+      "@type": "Person",
+      "@id": body.authorId+"",
+      identifier: body.authorId // Aqui el id de autor.
     }
   });
 
   blog.save()
 
-  Blogs.push(body)
-  return Blogs[Blogs.length-1]
-  
-//   return new Promise(function(resolve, reject) {
-//     var examples = {};
-//     examples['application/json'] = {
-//   "id" : 0
-// };
-//     if (Object.keys(examples).length > 0) {
-//       resolve(examples[Object.keys(examples)[0]]);
-//     } else {
-//       resolve();
-//     }
-//   });
+  Blogs.push(blog)
+  return Blogs[Blogs.length - 1]
+
+  //   return new Promise(function(resolve, reject) {
+  //     var examples = {};
+  //     examples['application/json'] = {
+  //   "id" : 0
+  // };
+  //     if (Object.keys(examples).length > 0) {
+  //       resolve(examples[Object.keys(examples)[0]]);
+  //     } else {
+  //       resolve();
+  //     }
+  //   });
 }
 
 
@@ -62,42 +67,43 @@ exports.createBlog = async function(body) {
  * query String 
  * returns List
  **/
-exports.searchBlog = async function(query) {
+exports.searchBlog = async function (query) {
   query = query.trim().toLowerCase()
 
-  await blogModel.find
-  
+  // return await blogModel.(blog => blog.name.toLowerCase().includes(query) ||
+  // blog.description.toLowerCase().includes(query))
+
   // let listaBlogs = 
-  return Blogs.filter(blog => blog.name.toLowerCase().includes(query) || 
-                              blog.description.toLowerCase().includes(query) /*||
+  return Blogs.filter(blog => blog.headline.toLowerCase().includes(query) ||
+    blog.description.toLowerCase().includes(query) /*||
                               blog.category.toLowerCase().includes(query)*/)
   // var indicesBlogs = []
   // listaBlogs.forEach(value => indicesBlogs.push(value.blogId));
   // return indicesBlogs
 
-//   return new Promise(function(resolve, reject) {
-//     var examples = {};
-//     examples['application/json'] = [ {
-//   "name" : "name",
-//   "description" : "description",
-//   "authorId" : 6,
-//   "category" : "category",
-//   "blogId" : 0,
-//   "tags" : [ "tags", "tags" ]
-// }, {
-//   "name" : "name",
-//   "description" : "description",
-//   "authorId" : 6,
-//   "category" : "category",
-//   "blogId" : 0,
-//   "tags" : [ "tags", "tags" ]
-// } ];
-//     if (Object.keys(examples).length > 0) {
-//       resolve(examples[Object.keys(examples)[0]]);
-//     } else {
-//       resolve();
-//     }
-//   });
+  //   return new Promise(function(resolve, reject) {
+  //     var examples = {};
+  //     examples['application/json'] = [ {
+  //   "name" : "name",
+  //   "description" : "description",
+  //   "authorId" : 6,
+  //   "category" : "category",
+  //   "blogId" : 0,
+  //   "tags" : [ "tags", "tags" ]
+  // }, {
+  //   "name" : "name",
+  //   "description" : "description",
+  //   "authorId" : 6,
+  //   "category" : "category",
+  //   "blogId" : 0,
+  //   "tags" : [ "tags", "tags" ]
+  // } ];
+  //     if (Object.keys(examples).length > 0) {
+  //       resolve(examples[Object.keys(examples)[0]]);
+  //     } else {
+  //       resolve();
+  //     }
+  //   });
 }
 
 
@@ -108,37 +114,37 @@ exports.searchBlog = async function(query) {
  * category String 
  * returns List
  **/
-exports.searchBlogCategory = async function(category) {
-  
+exports.searchBlogCategory = async function (category) {
+
   // let listaBlogs = 
-  return Blogs.filter(cat => cat.category == category)
+  return Blogs.filter(cat => cat.genre == category)
 
   // var indicesBlogs = []
   // listaBlogs.forEach(value => indicesBlogs.push(value.blogId));
   // return indicesBlogs
 
-//   return new Promise(function(resolve, reject) {
-//     var examples = {};
-//     examples['application/json'] = [ {
-//   "name" : "name",
-//   "description" : "description",
-//   "authorId" : 6,
-//   "category" : "category",
-//   "blogId" : 0,
-//   "tags" : [ "tags", "tags" ]
-// }, {
-//   "name" : "name",
-//   "description" : "description",
-//   "authorId" : 6,
-//   "category" : "category",
-//   "blogId" : 0,
-//   "tags" : [ "tags", "tags" ]
-// } ];
-//     if (Object.keys(examples).length > 0) {
-//       resolve(examples[Object.keys(examples)[0]]);
-//     } else {
-//       resolve();
-//     }
-//   });
+  //   return new Promise(function(resolve, reject) {
+  //     var examples = {};
+  //     examples['application/json'] = [ {
+  //   "name" : "name",
+  //   "description" : "description",
+  //   "authorId" : 6,
+  //   "category" : "category",
+  //   "blogId" : 0,
+  //   "tags" : [ "tags", "tags" ]
+  // }, {
+  //   "name" : "name",
+  //   "description" : "description",
+  //   "authorId" : 6,
+  //   "category" : "category",
+  //   "blogId" : 0,
+  //   "tags" : [ "tags", "tags" ]
+  // } ];
+  //     if (Object.keys(examples).length > 0) {
+  //       resolve(examples[Object.keys(examples)[0]]);
+  //     } else {
+  //       resolve();
+  //     }
+  //   });
 }
 
